Update Lab2 add name Mr.attapol aunop
Hello

--- a/lab2.html
+++ b/lab2.html
@@ -2,5 +2,6 @@
 <body>
 <h1>Lab2</h1>
 <p>Owner File is Mr.Atkarapong Pantem Number 5912269104</p>
+  <p>Owner File is Mr.attapol aunop Number 5912269106</p>
 </body>
 </html>
